--- a/test.ipynb
+++ b/test.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kandidatarbete\n"
+      "kandidatarbetettdd\n"
      ]
     }
    ],
    "source": [
-    "print(\"kandidatarbetet\")"
+    "print(\"kandidatarbetettdd\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Assigmnment6",
    "language": "python",
    "name": "python3"
   },
@@ -34,7 +34,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
