--- a/test2.ipynb
+++ b/test2.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kand\n"
+      "kandc\n"
      ]
     }
    ],
    "source": [
-    "print('kand')"
+    "print('kandidat')"
    ]
   }
  ],
