--- a/test.ipynb
+++ b/test.ipynb
@@ -9,12 +9,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kand\n"
+      "kanda\n"
      ]
     }
    ],
    "source": [
-    "print('kand')"
+    "print('kanda')"
    ]
   }
  ],
