--- a/test3.ipynb
+++ b/test3.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "kandidaa\n"
+      "kandidaaat\n"
      ]
     }
    ],
    "source": [
-    "print('kandidaaa')"
+    "print('kandidaaat')"
    ]
   }
  ],
