--- a/test3.ipynb
+++ b/test3.ipynb
@@ -1,23 +1,5 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "kandidaaat\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('kandidaaat')"
-   ]
-  }
- ],
+ "cells": [],
  "metadata": {
   "kernelspec": {
    "display_name": "Assigmnment6",
